--- a/Hellwig.css
+++ b/Hellwig.css
@@ -12,21 +12,19 @@
     font-style: normal;
 }
 
-
-
-body{
-    font-family: Oxygen-Regular,"Helvetica Neue", Arial, sans-serif;
+body {
+    font-family: Oxygen-Regular, "Helvetica Neue", Arial, sans-serif;
     overflow-x: hidden;
     background-color: #eeeeee;
 }
 
 a,
-a:hover{
+a:hover {
     color: #1b4028;
     text-decoration: none;
 }
 
-strong{
+strong {
     font-family: Oxygen-Bold, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -36,11 +34,12 @@ strong{
     top: 30px;
 }
 
-
 .container-nav {
-	height: 5em;
-	width: 1170px;
+    height: 5em;
+    width: 1170px;
     position: fixed;
+    right: 0;
+    left: 0;
     top: 0;
     box-shadow: 0 0 10px grey;
     margin-right: auto;
@@ -50,21 +49,43 @@ strong{
 }
 
 .main-logo {
-	float: left;
-	width: 14%;
-	height: 100%;
-	position: relative;
-	background: url("http://www.baumschule-hellwig.de/site/templates/images/hellwig-logo.png" ) no-repeat scroll left center transparent;
-	background-size: auto 200%;
-	z-index: 200;
+    /*float: left;
+    width: 14%;
+    height: 100%;
+    position: relative;*/
+    background: url("http://www.baumschule-hellwig.de/site/templates/images/hellwig-logo.png") no-repeat scroll left center white;
+    background-size: auto 200%;
+    /*z-index: 200; */
 }
 
-
-.container-nav li a{
+.container-nav li a {
     padding: 25px 20px;
-    background: none;
+    background: white;
     color: #1b4028;
     font-size: 18px;
+}
+
+/*Hide checkbox*/
+input[type=checkbox] {
+    display: none;
+}
+
+/*Show menu when invisible checkbox is checked*/
+input[type=checkbox]:checked ~ .nav {
+    display: block;
+}
+
+/*Style 'show menu' label button and hide it by default*/
+.show-menu {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-decoration: none;
+    color: #1b4028;
+    border-bottom: solid 1px lightgrey;
+    /*background: #1b4028;*/
+    text-align: right;
+    padding: 25px 20px;
+    height: 100%;
+    display: none;
 }
 
 .navbar.container-nav li a:hover,
@@ -79,25 +100,30 @@ strong{
 .navbar.container-nav li a.active:focus,
 .container-nav > .open > a.active,
 .container-nav > .open > a.active:hover,
-.container-nav > .open > a.active:focus{
+.container-nav > .open > a.active:focus {
     background-color: #1b4028;
     color: #fff;
 }
 
+/* mind the gap, when opening menu on mobile device*/
+.navbar-nav, .container-nav label {
+    margin: 0;
+}
+
 .nav {
-	list-style: none;
+    list-style: none;
 }
 
 h2, .h2 {
     font-size: 22px;
     margin: 15px 0 10px 0;
 }
+
 h3, .h3 {
     font-size: 18px;
 }
 
-
-h2 span,.h2 span,h2 strong,.h2 strong {
+h2 span, .h2 span, h2 strong, .h2 strong {
     color: #f6c200;
 }
 
@@ -110,11 +136,11 @@ h2 span,.h2 span,h2 strong,.h2 strong {
     font-size: 32px;
 }
 
-hr{
+hr {
     border-top: 3px solid #f6c200;
 }
 
-.teaser-box{
+.teaser-box {
     margin: 30px 0 0 0;
 }
 
@@ -130,7 +156,7 @@ h2,
 h3,
 .h3,
 h4,
-.h4{
+.h4 {
     color: #1b4028;
     font-family: Oxygen-Bold, "Helvetica Neue", Arial, sans-serif;
 }
@@ -141,18 +167,17 @@ h4,
     z-index: 98;
 }
 
-.box-shadow-container{
-    -webkit-box-shadow: -4px 4px 6px rgba(0,0,0,0.3),4px 4px 6px rgba(0,0,0,0.3);
-    -moz-box-shadow: -4px 4px 6px rgba(0,0,0,0.3),4px 4px 6px rgba(0,0,0,0.3);
-    box-shadow: -4px 4px 6px rgba(0,0,0,0.3),4px 4px 6px rgba(0,0,0,0.3);
+.box-shadow-container {
+    -webkit-box-shadow: -4px 4px 6px rgba(0, 0, 0, 0.3), 4px 4px 6px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: -4px 4px 6px rgba(0, 0, 0, 0.3), 4px 4px 6px rgba(0, 0, 0, 0.3);
+    box-shadow: -4px 4px 6px rgba(0, 0, 0, 0.3), 4px 4px 6px rgba(0, 0, 0, 0.3);
     padding: 0;
     background-color: #fff;
     position: relative;
 }
 
-
 .titel-box {
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 10px;
 }
 
@@ -160,14 +185,14 @@ h4,
     margin: auto;
 }
 
-.ausgleich_wrapper{
+.ausgleich_wrapper {
     height: 1px;
     width: 100%;
     margin: 40px 0 0 0;
 }
 
 .teaser-box p,
-.teaser-box h2{
+.teaser-box h2 {
     text-align: center;
 }
 
@@ -179,7 +204,7 @@ h4,
 
 .hellwig-btn,
 .ueber-uns-btn,
-.hellwig-search{
+.hellwig-search {
     padding: 10px 40px;
     background-color: #1b4028;
     border: none;
@@ -215,9 +240,7 @@ h4,
 .hellwig-search.active,
 .hellwig-search.active.active:hover,
 .hellwig-search.active:focus,
-.hellwig-search.active:active
-
-{
+.hellwig-search.active:active {
     color: #000000;
     background-color: #f6c200;
 }
@@ -227,11 +250,11 @@ h4,
     left: 27%;
 }
 
-.no-padding{
+.no-padding {
     padding: 0;
 }
 
-.galerie-item{
+.galerie-item {
     padding: 15px;
 }
 
@@ -248,8 +271,7 @@ footer {
     padding: 70px 0 0 0;
 }
 
-
-.footer-container{
+.footer-container {
     position: relative;
     background-color: #1b4028;
     top: -60px;
@@ -270,7 +292,7 @@ footer li,
 .upper_yellow_container a:active,
 .upper_yellow_container a:focus,
 .upper_yellow_container h4,
-.upper_yellow_container li{
+.upper_yellow_container li {
     color: #fff;
 }
 
@@ -280,13 +302,12 @@ footer li a,
     font-size: 16px;
 }
 
-
 footer li {
     list-style: none;
     margin: 7px 0;
 }
 
-.teaser{
+.teaser {
     text-align: center;
     margin: 15px 0;
 }
@@ -300,18 +321,15 @@ footer li {
     margin: 0 15px 0 0;
     color: #fff;
     bottom: 47px;
-    font-family: Oxygen-Bold,"Helvetica Neue", Arial, sans-serif;
+    font-family: Oxygen-Bold, "Helvetica Neue", Arial, sans-serif;
     width: 100%;
     font-size: 18px;
     top: 30%;
 }
 
-
-
-.teaser:hover .teaser-hover-box{
+.teaser:hover .teaser-hover-box {
     display: block;
 }
-
 
 .kategorie-titel-container h2 {
     margin: 0;
@@ -319,14 +337,12 @@ footer li {
     text-transform: uppercase;
 }
 
-
 .kategorie-titel-container {
     background-color: #fbf4d1;
     min-height: 78px;
 }
 
-
-.sortiment-container .kategorie-titel-container{
+.sortiment-container .kategorie-titel-container {
     background-color: #f6c200;
 }
 
@@ -336,7 +352,7 @@ footer li {
     margin: 0 0 15px 0;
 }
 
-.teaser-hover-box p{
+.teaser-hover-box p {
     font-size: 18px;
 }
 
@@ -350,6 +366,7 @@ footer li {
     font-size: 18px;
     margin: 0 0 30px 0;
 }
+
 .preview_unternehmen i {
     font-size: 32px;
     color: #f6c200;
@@ -372,18 +389,17 @@ footer li {
 .hellwig-btn-yellow.active,
 .hellwig-btn-yellow.active:hover,
 .hellwig-btn-yellow.active:focus,
-.hellwig-btn-yellow.active:focus
-{
+.hellwig-btn-yellow.active:focus {
     background-color: #1b4028;
     color: #fff;
     text-decoration: none;
 }
 
-.right_align{
+.right_align {
     float: right;
 }
 
-.center-block{
+.center-block {
     margin: 40px 0;
 }
 
@@ -392,19 +408,20 @@ footer li {
     left: calc(50% - 50px);
     margin: 0px;
 }
+
 footer ul {
     padding: 0;
     margin: 20px 0 0 0;
 }
 
-.navbar-right .dropdown-menu{
-    left:0 !important;
+.navbar-right .dropdown-menu {
+    left: 0 !important;
 }
 
-.container-nav .dropdown-menu{
+.container-nav .dropdown-menu {
     padding: 0;
     min-width: 300px;
-    overflow-x: hidden;
+    /* overflow-x: hidden;*/
 }
 
 .container-nav .dropdown-menu li a {
@@ -412,7 +429,7 @@ footer ul {
     border-radius: 0;
 }
 
-.center-img{
+.center-img {
     display: block;
     margin: auto;
 }
@@ -430,7 +447,7 @@ footer ul {
     text-decoration: none;
 }
 
-.teaser-item{
+.teaser-item {
     margin: 20px 0;
 }
 
@@ -466,9 +483,10 @@ footer p {
     font-size: 16px;
 }
 
-.logo-footer{
+.logo-footer {
     max-width: 100px;
 }
+
 .color_header {
     height: 23px;
     width: calc(100% + 60px);
@@ -490,14 +508,13 @@ footer p {
     padding: 10px;
 }
 
-.sortier-button-container.center-block{
+.sortier-button-container.center-block {
     left: auto;
     display: flex;
     justify-content: center;
     margin: 0;
 
 }
-
 
 .sortier-button-container.center-block .hellwig-btn {
     padding: 7px 30px;
@@ -530,8 +547,7 @@ footer p {
 .pagination_produkt a.active,
 .pagination_produkt a.active:hover,
 .pagination_produkt a.active:focus,
-.pagination_produkt a.active:active
-{
+.pagination_produkt a.active:active {
     background: #f6c200;
     text-decoration: none;
 }
@@ -548,8 +564,8 @@ footer p {
     border: 1px solid;
 }
 
-.padding-30{
-    padding:0 30px;
+.padding-30 {
+    padding: 0 30px;
 }
 
 .sortiment-galerie {
@@ -563,7 +579,7 @@ footer p {
     padding: 15px;
 }
 
-.sortiment-galerie img{
+.sortiment-galerie img {
     padding: 15px;
 }
 
@@ -601,7 +617,7 @@ footer p {
     padding: 40px 50px;
 }
 
-.padding-impressum{
+.padding-impressum {
     padding: 40px 50px;
 }
 
@@ -616,24 +632,26 @@ footer p {
 .aktuell-container {
     margin: 40px 0;
 }
+
 .aktuell-item {
     margin: 20px 0;
 }
+
 .btn-container {
     position: relative;
     margin: 20px 0;
     height: 42px;
 }
 
-.News .btn-container{
-    margin: 5px 0 ;
+.News .btn-container {
+    margin: 5px 0;
 }
 
 .aktuell_bildcontainer {
     margin: 25px 0px;
 }
 
-.aktuell-beitrag h1{
+.aktuell-beitrag h1 {
     margin: 0;
 }
 
@@ -644,7 +662,6 @@ footer p {
 .teaser-box img {
     margin: 20px 0 20px 0;
 }
-
 
 .privatverkauf h4 {
     text-align: right;
@@ -678,7 +695,6 @@ footer p {
     font-size: 16px;
 }
 
-
 #search-result a,
 #search-result a:hover,
 #search-result a:active,
@@ -686,7 +702,7 @@ footer p {
 #search-result a.active,
 #search-result a.active:hover,
 #search-result a.active:active,
-#search-result a.active:focus{
+#search-result a.active:focus {
     padding: 0;
     overflow-x: hidden;
     margin: 0;
@@ -705,23 +721,22 @@ footer p {
 #search-result li:active a,
 #search-result li:focus a,
 .upper_yellow_container h2,
-.upper_yellow_container h3
-
-{
+.upper_yellow_container h3 {
     color: #fff;
 }
 
 #search-result li:hover {
     background-color: #1b4028;
 }
+
 #search-result {
     position: absolute;
     z-index: 99;
     background-color: #fff;
     min-width: 235px;
-    -webkit-box-shadow: 1px 1px 4px 3px rgba(0,0,0,0.6);
-    -moz-box-shadow: 1px 1px 4px 3px rgba(0,0,0,0.6);
-    box-shadow: 1px 1px 4px 3px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 1px 1px 4px 3px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 1px 1px 4px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: 1px 1px 4px 3px rgba(0, 0, 0, 0.6);
     display: none;
 }
 
@@ -734,8 +749,7 @@ footer p {
 
 .upper_yellow_container .hellwig-btn-yellow:hover,
 .upper_yellow_container .hellwig-btn-yellow:focus,
-.upper_yellow_container .hellwig-btn-yellow:active
-{
+.upper_yellow_container .hellwig-btn-yellow:active {
     background-color: #f6c200;
 }
 
@@ -754,23 +768,20 @@ footer p {
     height: auto;
 }
 
-
 .startseiten_teaser .btn-container,
-.startseiten_teaser .hellwig-btn-yellow{
+.startseiten_teaser .hellwig-btn-yellow {
     margin: 0;
 }
 
-.startseiten_teaser .btn-container{
+.startseiten_teaser .btn-container {
     margin-bottom: 10px;
 }
-
 
 .no-underline,
 .no-underline a,
 .no-underline a:hover,
 .no-underline a:active,
-.no-underline a:focus
-{
+.no-underline a:focus {
     text-decoration: none !important;
 }
 
@@ -787,9 +798,9 @@ footer p {
     margin: 0 0 15px;
 }
 
-.presse-teaser{
-    margin-top: 30px ;
-    margin-bottom: 30px ;
+.presse-teaser {
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .presse-teaser h3 {
@@ -831,8 +842,7 @@ footer p {
     margin: 5px auto !important;
 }
 
-
-h4,.h4{
+h4, .h4 {
     font-size: 16px;
     font-family: Oxygen-Regular, "Helvetica Neue", Arial, sans-serif;
 }
@@ -848,8 +858,8 @@ h4,.h4{
 .form-control:focus {
     border-color: #1b4028;
     outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(27, 64, 40, .6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(27, 64, 40, .6);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(27, 64, 40, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(27, 64, 40, .6);
 }
 
 .home .upper_yellow_container {
@@ -870,10 +880,10 @@ h4,.h4{
     margin: 15px 0 40px 0;
 }
 
-
 .presse-teaser img {
     margin: auto;
 }
+
 .youtube_container {
     background-color: #000;
     width: 100%;
@@ -894,11 +904,12 @@ h4,.h4{
     margin: auto;
 }
 
-.sortiments-text{
-    padding: 0 30px ;
+.sortiments-text {
+    padding: 0 30px;
 }
-.sortiments-text p{
-    margin: 30px 0 0 0 ;
+
+.sortiments-text p {
+    margin: 30px 0 0 0;
 }
 
 /*
@@ -944,12 +955,14 @@ h4,.h4{
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
+
     .carousel-fade .carousel-inner > .item.prev,
     .carousel-fade .carousel-inner > .item.active.left {
         opacity: 0;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
+
     .carousel-fade .carousel-inner > .item.next.left,
     .carousel-fade .carousel-inner > .item.prev.right,
     .carousel-fade .carousel-inner > .item.active {
@@ -969,7 +982,7 @@ h4,.h4{
     color: #fff;
 }
 
-.tooltip-arrow{
+.tooltip-arrow {
     color: #1b4028;
     top: -100px;
 }
@@ -980,20 +993,18 @@ h4,.h4{
 }
 
 #carousel-example-generic {
-	padding-top: 4em;
+    padding-top: 4em;
 }
 
 div[id*="tooltip"] .tooltip-arrow,
-div[id*="tooltip"] .arrow
-{
+div[id*="tooltip"] .arrow {
     position: relative;
-    top:-100px;
+    top: -100px;
 }
 
-
-.tooltip-inner{
+.tooltip-inner {
     position: relative;
-    top:-100px;
+    top: -100px;
 }
 
 
